# lua_c_module_demo

./: CMakeLists.txt  README.md  lua_c_module.c  test.lua
